// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordResetRequest > matches snapshot in en 1`] = `
<div
  class="page auth password-reset-request"
  data-centered="false"
>
  <div
    class="page-header"
  >
    <div
      class="page-title-wrapper"
    >
      <div
        class="title"
      >
        <h1>
          Reset your password
        </h1>
        
        <!---->
        
      </div>
      
      <!---->
      
    </div>
    <div
      class="page-toolbar"
    >
      
      
    </div>
  </div>
  <div
    class="page-content"
  >
    
    
    
    <form
      novalidate=""
    >
      <div
        class="field email"
      >
        <label
          for="email"
        >
          Your email
        </label>
        
        <input
          class=""
          name="email"
          placeholder="john.doe@example.com"
          tabindex="0"
          type="email"
          value=""
        />
        <!---->
        
      </div>
      <div
        class="actions"
      >
        <div
          class="form-actions"
          data-alignment="filled"
          data-direction="horizontal"
          data-reverse="false"
          tabindex="0"
        >
          
          
          
          <button
            aria-label="button"
            class="button primary medium filled"
            id="submit"
            role="button"
            type="submit"
          >
            <!---->
            <div
              class="label"
            >
              
              <span>
                Email me
              </span>
              
            </div>
            <!---->
            <!---->
          </button>
          
          
          
        </div>
      </div>
    </form>
    
    <!---->
  </div>
</div>
`;

exports[`PasswordResetRequest > matches snapshot in fr 1`] = `
<div
  class="page auth password-reset-request"
  data-centered="false"
>
  <div
    class="page-header"
  >
    <div
      class="page-title-wrapper"
    >
      <div
        class="title"
      >
        <h1>
          Réinitialisation de votre mot de passe
        </h1>
        
        <!---->
        
      </div>
      
      <!---->
      
    </div>
    <div
      class="page-toolbar"
    >
      
      
    </div>
  </div>
  <div
    class="page-content"
  >
    
    
    
    <form
      novalidate=""
    >
      <div
        class="field email"
      >
        <label
          for="email"
        >
          Votre adresse courriel
        </label>
        
        <input
          class=""
          name="email"
          placeholder="john.doe@example.com"
          tabindex="0"
          type="email"
          value=""
        />
        <!---->
        
      </div>
      <div
        class="actions"
      >
        <div
          class="form-actions"
          data-alignment="filled"
          data-direction="horizontal"
          data-reverse="false"
          tabindex="0"
        >
          
          
          
          <button
            aria-label="button"
            class="button primary medium filled"
            id="submit"
            role="button"
            type="submit"
          >
            <!---->
            <div
              class="label"
            >
              
              <span>
                Réinitialiser
              </span>
              
            </div>
            <!---->
            <!---->
          </button>
          
          
          
        </div>
      </div>
    </form>
    
    <!---->
  </div>
</div>
`;
